--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -6,10 +6,13 @@
     <h1 class="display-3">You've Discovered My Secret!</h1>
 
     <%  usersWithSecrets.forEach(function (user) { %>
-    <p class="secret-text"><%= user.secret %></p>
+    <%  user.secrets.forEach(function (userSecret) { %>
+    <p class="secret-text"><%= userSecret %></p>
+    <%  }); %>
     <%  }); %>
 
     <hr>
+
 
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
